[project]
name = "fsm-qa-mcp"
version = "0.1.0"
description = "Minimal FastMCP server for FSM QA tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "mcp>=1.13.1",
    "pymysql>=1.1.2",
]

[project.scripts]
fsm-qa-mcp = "fsm_qa_mcp.server:run_stdio"

[build-system]
requires = ["hatchling>=1.14.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fsm_qa_mcp"]
